tests/integration/should-fail/MultipleEndIf.twee
::Start
<<if true>>Text1<<else>>Text2<<endif>>Text3<<endif>>
